--- a/essential-gray-flat/sass/var/form/field/Checkbox.scss
+++ b/essential-gray-flat/sass/var/form/field/Checkbox.scss
@@ -1,5 +1,4 @@
-///** @class Ext.form.field.Checkbox */
-////
+/** @class Ext.form.field.Checkbox */
 //
-//$form-checkbox-size: dynamic(15px);
-$form_checkbox_glyph_focus_color : $light-color;
+
+$form_checkbox_glyph_focus_color : dynamic($light-color);
