--- a/essential-gray-flat/sass/var/form/Labelable.scss
+++ b/essential-gray-flat/sass/var/form/Labelable.scss
@@ -1,4 +1,4 @@
 /** @class Ext.form.Labelable */
 //
-$form_label_font_color : #ffffff;
+$form_label_font_color : dynamic($light-color);
 $form_label_font_size : 14px;
