--- a/essential-gray-flat/sass/var/panel/Panel.scss
+++ b/essential-gray-flat/sass/var/panel/Panel.scss
@@ -1,3 +1,3 @@
-$panel_header_background_color : #7B7B7B;
+$panel_header_background_color : dynamic($base-highlight-color);
 
-$panel_body_background_color : #4C4C54;
+$panel_body_background_color : dynamic($body-color-var);
