--- a/essential-gray-flat/sass/var/Component.scss
+++ b/essential-gray-flat/sass/var/Component.scss
@@ -5,4 +5,6 @@ $base-highlight-color: dynamic(#7B7B7B);
 
 $body-color-var: dynamic(#4C4C54);
 
+$window-color-var: dynamic(#21212B);
+
 $light-color: dynamic(#fff);
