--- a/essential-gray-flat/sass/var/window/Window.scss
+++ b/essential-gray-flat/sass/var/window/Window.scss
@@ -1,3 +1,3 @@
 /** @class Ext.window.Window */
 //
-$window_body_background_color: dynamic($body-color-var);
+$window_body_background_color: dynamic($window-color-var);
