Updated: * Component colors. * Grid new version. * Tool bar updated. * Tab bar updated.

--- a/essential-gray-flat/sass/var/Component.scss
+++ b/essential-gray-flat/sass/var/Component.scss
@@ -8,3 +8,7 @@ $body-color-var: dynamic(#4C4C54);
 $window-color-var: dynamic(#21212B);
 
 $light-color: dynamic(#fff);
+
+$neutral_light_color: dynamic(#ccc);
+
+$body-background-color: dynamic(#666363)
