--- a/essential-gray-flat/sass/var/toolbar/Toolbar.scss
+++ b/essential-gray-flat/sass/var/toolbar/Toolbar.scss
@@ -3,3 +3,5 @@
 
 $toolbar-background-color: dynamic($base_color);
 $toolbar_footer_background_color: dynamic($base_color);
+
+$toolbar_text_color: dynamic($light-color);
